--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <header id="header-softcom" class="header">
     <nav class="header-menu">
-        <a href="https://softcomtecnologia.com.br" target="_blank" class="header-link"><img src="assets/softcom-black.png" alt="Logo da Softcom" class="softcom-logo"></a>
+        <a href="https://softcomtecnologia.com.br" target="_blank"><img src="assets/softcom-black.png" alt="Logo da Softcom" class="softcom-logo"></a>
         <a href="https://softcomtecnologia.com.br/apresentacao/" target="_blank" class="header-link">SOFTCOM</a>
         <a href="https://softcomtecnologia.com.br/franquia/" target="_blank" class="header-link">FRANQUIA</a>
         <a href="#" class="header-link" id="solucoes">SOLUÇÕES</a>
