--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
             <a class="banner-pix" href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank"><img src="assets/pix-white.png" alt="Banner sobre pix da Softcom" class="banner-main"></a>
     </section>
     <script src="script.js"></script>
+    <footer class="baseboard">Desenvolvido por <strong>
+        <a href="https://www.linkedin.com/in/j-gui/" target="_blank" class="baseboard-link">José Guilherme</a></strong>
+    </footer>
 </body>
 </html>
