--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/softcom-favicon.png">
+    <link rel="shortcut icon" href="assets/favicon.png">
     <title>Softcom Tecnologia</title>
 </head>
 <header id="header-softcom" class="header">
@@ -14,7 +14,7 @@
         <a href="https://softcomtecnologia.com.br/apresentacao/" target="_blank" class="header-link">SOFTCOM</a>
         <a href="https://softcomtecnologia.com.br/franquia/" target="_blank" class="header-link">FRANQUIA</a>
         <a href="#" class="header-link" id="solucoes">SOLUÇÕES</a>
-        <div id="solucoes-dropdown">
+        <!-- <div id="solucoes-dropdown">
             <li class="menu-solucoes">
                 <ul>
                     <li class="menu-item">
@@ -22,8 +22,8 @@
                     </li>
                 </ul>
             </li>
-        </div>
-        <a href="https://softcomtecnologia.com.br/todos-os-segmentos/" target="_blank" class="header-link">SEGMENTOS</a>
+        </div> -->
+        <a href="#segmentos" class="header-link">SEGMENTOS</a>
         <a href="https://softcomtecnologia.com.br/trabalhe-conosco/" target="_blank" class="header-link">TRABALHE CONOSCO</a>
 
         <div>
@@ -50,9 +50,39 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <section class="banner-section">
+    <section class="main-page">
         <div class="banner">
             <a class="banner-pix" href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank"><img src="assets/pix-white.png" alt="Banner sobre pix da Softcom" class="banner-main"></a>
+        </div>
+        <div class="intro">
+            <h2>
+                Com <strong class="strong-yellow">automação</strong> e <strong class="strong-yellow">inovação</strong>, desenvolvemos soluções tecnologicas, auxiliando na gestão de mais de <strong class="strong-yellow">10 mil empresas</strong> em mais de <strong class="strong-yellow">20 segmentos</strong> de varejo e atacado.  
+            </h2>
+        </div>
+    </section>
+    <section class="mid-page" id="segmentos">
+        <div class="segmentos">
+            <h1 class="line-yellow">
+                SEGMENTOS
+            </h1>
+            <p>
+                Encontre aqui o seu <strong class="strong-yellow">segmento</strong> e descubra tudo o que a <strong class="strong-yellow">Softcom</strong> pode fazer por você e pelo seu <strong class="strong-yellow">negócio</strong>.
+            </p>    
+            <div class="container-segmentos">
+                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank"><img src="assets/Modas-e-Lojas.svg" alt="" class="segmentos-images">
+                    <span>Moda</span>
+                </a>
+                <img src="assets/Restaurantes-e-Bares.svg" alt="" class="segmentos-images">
+                <span>Food Services</span>
+                <img src="assets/Peças-e-Serviços-1.svg" alt="" class="segmentos-images">
+                <span>Peças e Serviços</span>
+                <img src="assets/Petshops.svg" alt="" class="segmentos-images">
+                <span>Petshop</span>
+                <img src="assets/gas.svg" alt="" class="segmentos-images">
+                <span>Gás e Água</span>
+                <img src="" alt="">
+            </div>
+        </div>
     </section>
     <script src="script.js"></script>
     <footer class="baseboard">Desenvolvido por <strong>
