--- a/index.html
+++ b/index.html
@@ -69,17 +69,23 @@
                 Encontre aqui o seu <strong class="strong-yellow">segmento</strong> e descubra tudo o que a <strong class="strong-yellow">Softcom</strong> pode fazer por você e pelo seu <strong class="strong-yellow">negócio</strong>.
             </p>    
             <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank"><img src="assets/Modas-e-Lojas.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank" class="segmentos-links"><img src="assets/Modas-e-Lojas.svg" alt="" class="segmentos-images">
                     <span>Moda</span>
                 </a>
-                <img src="assets/Restaurantes-e-Bares.svg" alt="" class="segmentos-images">
-                <span>Food Services</span>
-                <img src="assets/Peças-e-Serviços-1.svg" alt="" class="segmentos-images">
-                <span>Peças e Serviços</span>
-                <img src="assets/Petshops.svg" alt="" class="segmentos-images">
-                <span>Petshop</span>
-                <img src="assets/gas.svg" alt="" class="segmentos-images">
-                <span>Gás e Água</span>
+                <a href="https://softcomtecnologia.com.br/segmentos/food-service/" target="_blank" class="segmentos-links"><img src="assets/Restaurantes-e-Bares.svg" alt="" class="segmentos-images">
+                    <span>Food Service</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/pecas-e-servicos/" target="_
+                " class="segmentos-links"><img src="assets/Peças-e-Serviços-1.svg" alt="" class="segmentos-images">
+                    <span>Peças e Serviços</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/petshop/" target="_blank" class="segmentos-links"><img src="assets/Petshops.svg" alt="" class="segmentos-images">
+                    <span>Petshop</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gas.svg" alt="" class="segmentos-images">
+                    <span>Gás e Água</span>
+                </a>
+                
                 <img src="" alt="">
             </div>
         </div>
