--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
         </div> -->
         <a href="#segmentos" class="header-link">SEGMENTOS</a>
         <a href="https://softcomtecnologia.com.br/trabalhe-conosco/" target="_blank" class="header-link">TRABALHE CONOSCO</a>
-
-        <div>
-            <a href="tel:(81)08000033600" class="header-link">0800 003 3600</a>
-            <br>
-            <span class="header-fale-conosco">FALE CONOSCO</span>
-        </div>
+        <span class="header-fale-conosco">FALE CONOSCO</span>
         
         <div class="div-button">
             <a href="https://softcomtecnologia.com.br/formulario-para-proposta/" class="header-proposta" target="_blank"><img src="assets/solicitar-propostaa.png" class="mensage-icon" alt="Icone de uma carta">SOLICITAR PROPOSTA</a>
@@ -56,7 +51,7 @@
         </div>
         <div class="intro">
             <h2>
-                Com <strong class="strong-yellow">automação</strong> e <strong class="strong-yellow">inovação</strong>, desenvolvemos soluções tecnologicas, auxiliando na gestão de mais de <strong class="strong-yellow">10 mil empresas</strong> em mais de <strong class="strong-yellow">20 segmentos</strong> de varejo e atacado.  
+                Com automação e inovação, desenvolvemos soluções tecnologicas, auxiliando na gestão de mais de 10 mil empresas em mais de 20 segmentos de varejo e atacado.  
             </h2>
         </div>
     </section>
@@ -85,8 +80,26 @@
                 <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gas.svg" alt="" class="segmentos-images">
                     <span>Gás e Água</span>
                 </a>
-                
-                <img src="" alt="">
+            </div>
+            <div class="container-segmentos">
+                <a href="https://softcomtecnologia.com.br/segmentos/moveis/" target="_blank" class="segmentos-links"><img src="assets/loja-de-móveis.svg" alt="" class="segmentos-images">
+                    <span>Móveis</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/industria/" target="_blank" class="segmentos-links"><img src="assets/industria.svg" alt="" class="segmentos-images">
+                    <span>Indústria</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/assistencia-e-servicos/" target="_blank" class="segmentos-links"><img src="assets/Sindicados-e-Associacoes.svg" alt="" class="segmentos-images">
+                    <span>Assistência e Serviços</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/material-medico/" target="_blank" class="segmentos-links"><img src="assets/clinica.svg" alt="" class="segmentos-images">
+                    <span>Material Médico</span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/segmentos/atacadistas-e-distribuidores/" target="_blank" class="segmentos-links"><img src="assets/Distribuidoras.svg" alt="" class="segmentos-images">
+                    <span>Atacadistas</span> 
+                </a>
+            </div>
+            <div class="ver-mais">
+                Ver mais
             </div>
         </div>
     </section>
