--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </div> -->
         <a href="#segmentos" class="header-link">SEGMENTOS</a>
         <a href="https://softcomtecnologia.com.br/trabalhe-conosco/" target="_blank" class="header-link">TRABALHE CONOSCO</a>
-        <span class="header-fale-conosco">FALE CONOSCO</span>
+        
         
         <div class="div-button">
-            <a href="https://softcomtecnologia.com.br/formulario-para-proposta/" class="header-proposta" target="_blank"><img src="assets/solicitar-propostaa.png" class="mensage-icon" alt="Icone de uma carta">SOLICITAR PROPOSTA</a>
+            <a href="https://softcomtecnologia.com.br/formulario-para-proposta/" class="header-proposta" target="_blank"><img src="assets/solicitar-propostaa.png" class="icon-proposta" alt="Icone de uma carta">SOLICITAR PROPOSTA</a>
 
-            <a href="http://softcom.areaclientes.com.br/autenticacao" class="header-proposta" target="_blank"><img src="assets/icon-user.png" class="mensage-icon icon-user" alt="Icone de um boneco representando o usuário">ÁREA DO CLIENTE</a>
+            <a href="http://softcom.areaclientes.com.br/autenticacao" class="header-proposta" target="_blank"><img src="assets/icon-user.png" class="icon-proposta icon-user" alt="Icone de um boneco representando o usuário">ÁREA DO CLIENTE</a>
         </div>
     </nav>
 </header>
@@ -56,27 +56,35 @@
         </div>
     </section>
     <section class="mid-page" id="segmentos">
-        <div class="segmentos">
             <h1 class="line-yellow">
                 SEGMENTOS
             </h1>
             <p>
                 Encontre aqui o seu <strong class="strong-yellow">segmento</strong> e descubra tudo o que a <strong class="strong-yellow">Softcom</strong> pode fazer por você e pelo seu <strong class="strong-yellow">negócio</strong>.
             </p>    
+        <div class="segmentos">
             <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank" class="segmentos-links"><img src="assets/Modas-e-Lojas.svg" alt="" class="segmentos-images">
                     <span>Moda</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/food-service/" target="_blank" class="segmentos-links"><img src="assets/Restaurantes-e-Bares.svg" alt="" class="segmentos-images">
                     <span>Food Service</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/pecas-e-servicos/" target="_
                 " class="segmentos-links"><img src="assets/Peças-e-Serviços-1.svg" alt="" class="segmentos-images">
                     <span>Peças e Serviços</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/petshop/" target="_blank" class="segmentos-links"><img src="assets/Petshops.svg" alt="" class="segmentos-images">
                     <span>Petshop</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gas.svg" alt="" class="segmentos-images">
                     <span>Gás e Água</span>
                 </a>
@@ -85,22 +93,30 @@
                 <a href="https://softcomtecnologia.com.br/segmentos/moveis/" target="_blank" class="segmentos-links"><img src="assets/loja-de-móveis.svg" alt="" class="segmentos-images">
                     <span>Móveis</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/industria/" target="_blank" class="segmentos-links"><img src="assets/industria.svg" alt="" class="segmentos-images">
                     <span>Indústria</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/assistencia-e-servicos/" target="_blank" class="segmentos-links"><img src="assets/Sindicados-e-Associacoes.svg" alt="" class="segmentos-images">
                     <span>Assistência e Serviços</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/material-medico/" target="_blank" class="segmentos-links"><img src="assets/clinica.svg" alt="" class="segmentos-images">
                     <span>Material Médico</span>
                 </a>
+            </div>
+            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/atacadistas-e-distribuidores/" target="_blank" class="segmentos-links"><img src="assets/Distribuidoras.svg" alt="" class="segmentos-images">
                     <span>Atacadistas</span> 
                 </a>
             </div>
-            <div class="ver-mais">
-                Ver mais
-            </div>
+        </div>
+        <div class="ver-mais">
+            <a href="https://softcomtecnologia.com.br/todos-os-segmentos/" target="_blank" class="ver-mais-link">Ver mais</a>
         </div>
     </section>
     <script src="script.js"></script>
