--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Softcom Tecnologia</title>
 </head>
 <header id="header-softcom" class="header">
+    <a href="https://softcomtecnologia.com.br" target="_blank"><img src="assets/softcom-black.png" alt="Logo da Softcom" class="softcom-logo"></a>
     <nav class="header-menu">
-        <a href="https://softcomtecnologia.com.br" target="_blank"><img src="assets/softcom-black.png" alt="Logo da Softcom" class="softcom-logo"></a>
         <a href="https://softcomtecnologia.com.br/apresentacao/" target="_blank" class="header-link">SOFTCOM</a>
         <a href="https://softcomtecnologia.com.br/franquia/" target="_blank" class="header-link">FRANQUIA</a>
-        <a href="#" class="header-link" id="solucoes">SOLUÇÕES</a>
+        <a href="#solucoes" class="header-link">SOLUÇÕES</a>
         <!-- <div id="solucoes-dropdown">
             <li class="menu-solucoes">
                 <ul>
@@ -64,53 +64,37 @@
             </p>    
         <div class="segmentos">
             <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank" class="segmentos-links"><img src="assets/Modas-e-Lojas.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank" class="segmentos-links"><img src="assets/Modas-e-Lojas.svg" alt="Um botão - imagem de sacolas de compras e um presente" class="segmentos-images">
                     <span>Moda</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/food-service/" target="_blank" class="segmentos-links"><img src="assets/Restaurantes-e-Bares.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/food-service/" target="_blank" class="segmentos-links"><img src="assets/Restaurantes-e-Bares.svg" alt="Um botão - imagem de um prato de comida com uma taça e um garfo" class="segmentos-images">
                     <span>Food Service</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
                 <a href="https://softcomtecnologia.com.br/segmentos/pecas-e-servicos/" target="_
-                " class="segmentos-links"><img src="assets/Peças-e-Serviços-1.svg" alt="" class="segmentos-images">
+                " class="segmentos-links"><img src="assets/Peças-e-Serviços-1.svg" alt="Um botão - imagem de um carro e uma uma ferramenta" class="segmentos-images">
                     <span>Peças e Serviços</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/petshop/" target="_blank" class="segmentos-links"><img src="assets/Petshops.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/petshop/" target="_blank" class="segmentos-links"><img src="assets/Petshops.svg" alt="Um botão - imagem de uma pata de cachorro" class="segmentos-images">
                     <span>Petshop</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gas.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gas.svg" alt="Um botão - imagem de um botijão de gás" class="segmentos-images">
                     <span>Gás e Água</span>
                 </a>
-            </div>
+            </div> 
             <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/moveis/" target="_blank" class="segmentos-links"><img src="assets/loja-de-móveis.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/moveis/" target="_blank" class="segmentos-links"><img src="assets/loja-de-móveis.svg" alt="Um botão - imagem de um guarda roupa" class="segmentos-images">
                     <span>Móveis</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/industria/" target="_blank" class="segmentos-links"><img src="assets/industria.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/industria/" target="_blank" class="segmentos-links"><img src="assets/industria.svg" alt="Um botão - imagem de uma fábrica" class="segmentos-images">
                     <span>Indústria</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/assistencia-e-servicos/" target="_blank" class="segmentos-links"><img src="assets/Sindicados-e-Associacoes.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/assistencia-e-servicos/" target="_blank" class="segmentos-links"><img src="assets/Sindicados-e-Associacoes.svg" alt="Um botão - imagem de 3 pessoas e um aperto de mão entre elas" class="segmentos-images">
                     <span>Assistência e Serviços</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/material-medico/" target="_blank" class="segmentos-links"><img src="assets/clinica.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/material-medico/" target="_blank" class="segmentos-links"><img src="assets/clinica.svg" alt="Um botão - imagem de uma cadeira de dentista" class="segmentos-images">
                     <span>Material Médico</span>
                 </a>
-            </div>
-            <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/atacadistas-e-distribuidores/" target="_blank" class="segmentos-links"><img src="assets/Distribuidoras.svg" alt="" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/atacadistas-e-distribuidores/" target="_blank" class="segmentos-links"><img src="assets/Distribuidoras.svg" alt="Um botão - imagem de um caminhão" class="segmentos-images">
                     <span>Atacadistas</span> 
                 </a>
             </div>
@@ -118,6 +102,39 @@
         <div class="ver-mais">
             <a href="https://softcomtecnologia.com.br/todos-os-segmentos/" target="_blank" class="ver-mais-link">Ver mais</a>
         </div>
+    </section>
+    <section class="bottom-page" id="solucoes">
+        <!-- <div class="container-solucoes">   
+            <div class="solucoes">
+                <a href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank"><img src="" alt="Um botão - imagem dando referência a uma transação de dois celulares">
+                    <span></span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/solucoes/meios-de-pagamento/" target="_blank"><img src="" alt="Um botão - imagem de uma mão recebendo um cartão">
+                    <span></span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/solucoes/mobilidade/" target="_blank"><img src="" alt="Um botão - imagem de uma bola representando o globo terrestre e um ponto ligado de um canto ao outro representando uma distancia percorrida">
+                    <span></span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/solucoes/shopping-virtual/" target="_blank"><img src="" alt="Um botão - imagem de um cofre e um saco de dinheiro ao lado">
+                    <span></span>
+                </a>
+            </div>
+
+            <div class="solucoes">
+                <a href="https://softcomtecnologia.com.br/solucoes/seguranca/" target="_blank"><img src="" alt="Um botão - imagem de uma tela de computador e no canto inferior direito um escuto representando segurança">
+                    <span></span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/solucoes/solucoes-fiscais/" target="_blank"><img src="" alt="Um botão - imagem de uma nota fiscal">
+                    <span></span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/solucoes/tomada-de-decisoes/" target="_blank"><img src="" alt="Um botão - imagem de escudo com um simbolo de correto no meio representando uma tomada de decisão correta">
+                    <span></span>
+                </a>
+                <a href="https://softcomtecnologia.com.br/solucoes/loja-online-delivery/" target="_blank"><img src="Um botão - imagem de uma tela de computador mostrando um site de uma loja" alt="">
+                    <span></span>
+                </a>
+            </div>
+        </div> -->
     </section>
     <script src="script.js"></script>
     <footer class="baseboard">Desenvolvido por <strong>
