--- a/index.html
+++ b/index.html
@@ -64,37 +64,37 @@
             </p>    
         <div class="segmentos">
             <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank" class="segmentos-links"><img src="assets/Modas-e-Lojas.svg" alt="Um botão - imagem de sacolas de compras e um presente" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/moda/" target="_blank" class="segmentos-links"><img src="assets/Modas-e-Lojas.png" alt="Um botão - imagem de sacolas de compras e um presente" class="segmentos-images">
                     <span>Moda</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/food-service/" target="_blank" class="segmentos-links"><img src="assets/Restaurantes-e-Bares.svg" alt="Um botão - imagem de um prato de comida com uma taça e um garfo" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/food-service/" target="_blank" class="segmentos-links"><img src="assets/Restaurantes-e-Bares.png" alt="Um botão - imagem de um prato de comida com uma taça e um garfo" class="segmentos-images">
                     <span>Food Service</span>
                 </a>
                 <a href="https://softcomtecnologia.com.br/segmentos/pecas-e-servicos/" target="_
-                " class="segmentos-links"><img src="assets/Peças-e-Serviços-1.svg" alt="Um botão - imagem de um carro e uma uma ferramenta" class="segmentos-images">
+                " class="segmentos-links"><img src="assets/Peças-e-Serviços.png" alt="Um botão - imagem de um carro e uma uma ferramenta" class="segmentos-images">
                     <span>Peças e Serviços</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/petshop/" target="_blank" class="segmentos-links"><img src="assets/Petshops.svg" alt="Um botão - imagem de uma pata de cachorro" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/petshop/" target="_blank" class="segmentos-links"><img src="assets/Petshops.png" alt="Um botão - imagem de uma pata de cachorro" class="segmentos-images">
                     <span>Petshop</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gas.svg" alt="Um botão - imagem de um botijão de gás" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/gas-e-agua/" target="_blank" class="segmentos-links"><img src="assets/gás-e-água.png" alt="Um botão - imagem de um botijão de gás" class="segmentos-images">
                     <span>Gás e Água</span>
                 </a>
             </div> 
             <div class="container-segmentos">
-                <a href="https://softcomtecnologia.com.br/segmentos/moveis/" target="_blank" class="segmentos-links"><img src="assets/loja-de-móveis.svg" alt="Um botão - imagem de um guarda roupa" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/moveis/" target="_blank" class="segmentos-links"><img src="assets/loja-de-móveis.png" alt="Um botão - imagem de um guarda roupa" class="segmentos-images">
                     <span>Móveis</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/industria/" target="_blank" class="segmentos-links"><img src="assets/industria.svg" alt="Um botão - imagem de uma fábrica" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/industria/" target="_blank" class="segmentos-links"><img src="assets/industria.png" alt="Um botão - imagem de uma fábrica" class="segmentos-images">
                     <span>Indústria</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/assistencia-e-servicos/" target="_blank" class="segmentos-links"><img src="assets/Sindicados-e-Associacoes.svg" alt="Um botão - imagem de 3 pessoas e um aperto de mão entre elas" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/assistencia-e-servicos/" target="_blank" class="segmentos-links"><img src="assets/assistencia-e-serviços.png" alt="Um botão - imagem de 3 pessoas e um aperto de mão entre elas" class="segmentos-images">
                     <span>Assistência e Serviços</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/material-medico/" target="_blank" class="segmentos-links"><img src="assets/clinica.svg" alt="Um botão - imagem de uma cadeira de dentista" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/material-medico/" target="_blank" class="segmentos-links"><img src="assets/material-médico.png" alt="Um botão - imagem de uma cadeira de dentista" class="segmentos-images">
                     <span>Material Médico</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/segmentos/atacadistas-e-distribuidores/" target="_blank" class="segmentos-links"><img src="assets/Distribuidoras.svg" alt="Um botão - imagem de um caminhão" class="segmentos-images">
+                <a href="https://softcomtecnologia.com.br/segmentos/atacadistas-e-distribuidores/" target="_blank" class="segmentos-links"><img src="assets/distribuidora.png" alt="Um botão - imagem de um caminhão" class="segmentos-images">
                     <span>Atacadistas</span> 
                 </a>
             </div>
@@ -104,37 +104,41 @@
         </div>
     </section>
     <section class="bottom-page" id="solucoes">
-        <!-- <div class="container-solucoes">   
+        <div class="container-text-solucoes ">
+            <h1 class="line-yellow">SOLUÇÕES
+            </h1>
+        </div>
+        <div class="container-solucoes">   
             <div class="solucoes">
-                <a href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank"><img src="" alt="Um botão - imagem dando referência a uma transação de dois celulares">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank" class="solucoes-link"><img src="assets/pix.png" alt="Um botão - imagem dando referência a uma transação de dois celulares" class="image-solucoes">
+                    <span>Pix</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/solucoes/meios-de-pagamento/" target="_blank"><img src="" alt="Um botão - imagem de uma mão recebendo um cartão">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/meios-de-pagamento/" target="_blank" class="solucoes-link"><img src="assets/meios-de-pagamento.png" alt="Um botão - imagem de uma mão recebendo um cartão" class="image-solucoes">
+                    <span>Meios de Pagamento</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/solucoes/mobilidade/" target="_blank"><img src="" alt="Um botão - imagem de uma bola representando o globo terrestre e um ponto ligado de um canto ao outro representando uma distancia percorrida">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/mobilidade/" target="_blank" class="solucoes-link"><img src="assets/mobilidade.png" alt="Um botão - imagem de uma bola representando o globo terrestre e um ponto ligado de um canto ao outro representando uma distancia percorrida" class="image-solucoes">
+                    <span>Mobilidade</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/solucoes/shopping-virtual/" target="_blank"><img src="" alt="Um botão - imagem de um cofre e um saco de dinheiro ao lado">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/shopping-virtual/" target="_blank" class="solucoes-link"><img src="assets/shopping-virtual.png" alt="Um botão - imagem de um cofre e um saco de dinheiro ao lado" class="image-solucoes">
+                    <span>Shopping Virtual</span>
                 </a>
             </div>
 
             <div class="solucoes">
-                <a href="https://softcomtecnologia.com.br/solucoes/seguranca/" target="_blank"><img src="" alt="Um botão - imagem de uma tela de computador e no canto inferior direito um escuto representando segurança">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/seguranca/" target="_blank" class="solucoes-link"><img src="assets/segurança.png" alt="Um botão - imagem de uma tela de computador e no canto inferior direito um escuto representando segurança" class="image-solucoes">
+                    <span>Segurança</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/solucoes/solucoes-fiscais/" target="_blank"><img src="" alt="Um botão - imagem de uma nota fiscal">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/solucoes-fiscais/" target="_blank" class="solucoes-link"><img src="assets/soluções-fiscais.png" alt="Um botão - imagem de uma nota fiscal" class="image-solucoes">
+                    <span>Soluções Fiscais</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/solucoes/tomada-de-decisoes/" target="_blank"><img src="" alt="Um botão - imagem de escudo com um simbolo de correto no meio representando uma tomada de decisão correta">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/tomada-de-decisoes/" target="_blank" class="solucoes-link"><img src="assets/tomada-de-decisão.png" alt="Um botão - imagem de escudo com um simbolo de correto no meio representando uma tomada de decisão correta" class="image-solucoes">
+                    <span>Tomada de Decisões</span>
                 </a>
-                <a href="https://softcomtecnologia.com.br/solucoes/loja-online-delivery/" target="_blank"><img src="Um botão - imagem de uma tela de computador mostrando um site de uma loja" alt="">
-                    <span></span>
+                <a href="https://softcomtecnologia.com.br/solucoes/loja-online-delivery/" target="_blank" class="solucoes-link"><img src="assets/loja-online-delivery.png" alt="Um botão - imagem de uma tela de computador mostrando um site de uma loja" class="image-solucoes">
+                    <span>Loja Online + Delivery</span>
                 </a>
             </div>
-        </div> -->
+        </div>
     </section>
     <script src="script.js"></script>
     <footer class="baseboard">Desenvolvido por <strong>
