--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <a href="https://softcomtecnologia.com.br/formulario-para-proposta/" class="header-proposta" target="_blank"><img src="assets/solicitar-propostaa.png" class="icon-proposta" alt="Icone de uma carta">SOLICITAR PROPOSTA</a>
 
             <a href="http://softcom.areaclientes.com.br/autenticacao" class="header-proposta" target="_blank"><img src="assets/icon-user.png" class="icon-proposta icon-user" alt="Icone de um boneco representando o usuário">ÁREA DO CLIENTE</a>
+
+            <a href="http://softcom.areaclientes.com.br/autenticacao" class="header-proposta" target="_blank"><img src="assets/icon-contador.png" class="icon-proposta icon-user" alt="Icone de um boneco com gravata representando o contador">ÁREA DO CONTADOR</a>
         </div>
     </nav>
 </header>
@@ -46,7 +48,7 @@
     </script>
     <section class="main-page">
         <div class="banner">
-            <a class="banner-pix" href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank"><img src="assets/pix-white.png" alt="Banner sobre pix da Softcom" class="banner-main"></a>
+            <a href="https://softcomtecnologia.com.br/solucoes/pix/" target="_blank"><img src="assets/pix-white.png" alt="Banner sobre pix da Softcom" class="banner-main"></a>
         </div>
         <div class="intro">
             <p>
@@ -141,8 +143,7 @@
     </section>
     <section class="footer">
         <div class="softcom">
-            <a href="https://softcomtecnologia.com.br" target="_blank"><img src="assets/softcom-yellow.png" alt="Logo da Softcom" class="softcom-logo" style="width: 20em;"></a>
-            
+            <a href="https://softcomtecnologia.com.br" target="_blank"><img src="assets/softcom-yellow.png" alt="Logo da Softcom" class="softcom-logo logo-footer"></a>
             <br>
             <h2>INFORMATIZAMOS SUA EMPRESA</h2>
             <p>LOJA FÍSICA <strong style="color: #fcd800; font-size: 1.8rem;">+</strong></p>
