--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <a href="http://softcom.areaclientes.com.br/autenticacao" class="header-proposta" target="_blank"><img src="assets/icon-user.png" class="icon-proposta icon-user" alt="Icone de um boneco representando o usuário">ÁREA DO CLIENTE</a>
 
-            <a href="http://softcom.areaclientes.com.br/autenticacao" class="header-proposta" target="_blank"><img src="assets/icon-contador.png" class="icon-proposta icon-user" alt="Icone de um boneco com gravata representando o contador">ÁREA DO CONTADOR</a>
+            <a href="http://areacontador.softcomsistemas.com.br/auth/login" class="header-proposta" target="_blank"><img src="assets/icon-contador.png" class="icon-proposta icon-user" alt="Icone de um boneco com gravata representando o contador">ÁREA DO CONTADOR</a>
         </div>
     </nav>
 </header>
